--- a/css/styles.css
+++ b/css/styles.css
@@ -462,6 +462,11 @@ body {
     left: 25px;
     margin: 0;
     border-radius: 20px;
+    pointer-events: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 /* Mobile Adaptation */
@@ -660,6 +665,11 @@ body {
         top: auto;
         margin: 15px auto 0 auto;
         display: block;
+        pointer-events: none;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
 
     .move-left {
@@ -738,5 +748,10 @@ body {
 
     .ayanami {
         max-width: 250px;
+        pointer-events: none;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
 }
